--- a/SportsSideKick/app/src/main/res/layout/popup_your_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_profile.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_margin="60dp"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginBottom="60dp"
+    android:layout_marginEnd="90dp"
+    android:layout_marginStart="90dp"
+    android:layout_marginTop="60dp">
 
     <!-- VIEW IN MIDDLE TO SPLIT EASIER -->
     <View
@@ -25,7 +28,7 @@
                 android:id="@+id/your_profile_button"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="2dp"
+                android:layout_marginEnd="1dp"
                 android:layout_weight="1"
                 android:background="@color/colorPrimarySemiLight"
                 android:gravity="center"
@@ -36,7 +39,7 @@
                 android:id="@+id/your_wallet_button"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="2dp"
+                android:layout_marginEnd="1dp"
                 android:layout_weight="1"
                 android:background="@color/colorAccentLight"
                 android:gravity="center"
@@ -63,22 +66,22 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
-                android:layout_marginEnd="2dp"
+                android:layout_marginEnd="1dp"
+                android:layout_weight="1"
+                android:background="@color/colorAccent" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginEnd="1dp"
                 android:layout_weight="1"
                 android:background="@color/colorPrimaryLight" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
-                android:layout_marginEnd="2dp"
                 android:layout_weight="1"
-                android:background="@color/colorAccent" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_weight="1"
-                android:background="@color/colorAccent" />
+                android:background="@color/colorPrimaryLight" />
         </LinearLayout>
 
         <!--  TOP SPLITTER-->
@@ -125,8 +128,8 @@
                     <ProgressBar
                         android:id="@+id/progressBar"
                         style="?android:attr/progressBarStyleHorizontal"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
                         android:layout_centerHorizontal="true"
                         android:background="@drawable/circle_shape"
                         android:indeterminate="false"
@@ -135,11 +138,12 @@
                         android:progressDrawable="@drawable/circular_progress_bar" />
 
                     <ImageView
-                        android:layout_width="82dp"
-                        android:layout_height="82dp"
+                        android:layout_width="65dp"
+                        android:layout_height="65dp"
                         android:layout_centerHorizontal="true"
                         android:layout_centerVertical="true"
-                        android:src="@drawable/demo_profile_image" />
+                        android:src="@drawable/demo_profile_image"
+                        android:contentDescription="@string/image" />
                 </RelativeLayout>
 
                 <ImageView
@@ -149,7 +153,8 @@
                     android:layout_alignStart="@id/profile_image_container"
                     android:layout_below="@id/profile_image_container"
                     android:layout_marginTop="-20dp"
-                    android:src="@drawable/next_level_marker" />
+                    android:src="@drawable/next_level_marker"
+                    android:contentDescription="@string/image" />
 
                 <TextView
                     android:layout_width="25dp"
@@ -299,7 +304,10 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/left_horizontal_split_line"
                 android:layout_centerVertical="true"
-                android:layout_margin="30dp"
+                android:layout_marginBottom="30dp"
+                android:layout_marginEnd="60dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="30dp"
                 android:layout_toStartOf="@+id/center_split_line">
 
                 <RelativeLayout
@@ -386,25 +394,24 @@
             </RelativeLayout>
         </RelativeLayout>
 
+    <!-- STATS LIST CONTAINER -->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/profile_stats_recycler_view"
         android:layout_width="match_parent"
-        android:layout_margin="30dp"
-        android:layout_below="@+id/top_split_line"
+        android:layout_height="match_parent"
         android:layout_above="@+id/bottom_buttons_container"
-        android:layout_toEndOf="@+id/center_split"
-        android:layout_height="match_parent">
-
-    </android.support.v7.widget.RecyclerView>
+        android:layout_below="@+id/top_split_line"
+        android:layout_margin="30dp"
+        android:layout_toEndOf="@+id/center_split"/>
 
         <!-- BOTTOM BUTTONS CONTAINER -->
         <RelativeLayout
             android:id="@+id/bottom_buttons_container"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_below="@+id/content_container"
-            android:layout_alignWithParentIfMissing="true"
             android:layout_alignParentStart="true"
+            android:layout_alignWithParentIfMissing="true"
+            android:layout_below="@+id/content_container"
             android:background="@drawable/popup_bottom_background">
 
             <View
@@ -421,7 +428,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginBottom="30dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginEnd="10dp"
                 android:background="@null"
                 android:scaleType="centerInside"
                 android:src="@drawable/popup_confirmation_button" />
@@ -433,8 +440,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:layout_marginBottom="30dp"
-                android:onClick="confirmOnClick"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="10dp"
                 android:background="@null"
                 android:scaleType="centerInside"
                 android:src="@drawable/edit_button" />
@@ -448,5 +454,4 @@
             android:layout_below="@+id/top_buttons_container"
             android:layout_centerHorizontal="true"
             android:background="@android:color/black" />
-
     </RelativeLayout>
