--- a/SportsSideKick/app/src/main/res/layout/fragment_club_tv.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_club_tv.xml
@@ -21,11 +21,21 @@
     </android.support.percent.PercentRelativeLayout>
     <!--  /\/\/\/\/\/\/\ -->
 
+   <Button
+       android:id="@+id/back_button"
+       android:layout_width="40dp"
+       android:layout_marginTop="8dp"
+       android:layout_alignParentTop="true"
+       android:layout_height="40dp"
+       android:layout_alignParentStart="true"
+       android:background="@drawable/video_back_button"/>
+
     <TextView
         android:id="@+id/caption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_alignBottom="@+id/back_button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
         android:gravity="center"
