--- a/SportsSideKick/app/src/main/res/values/colors.xml
+++ b/SportsSideKick/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="colorPrimaryLight">#00ab8d</color>
 
     <color name="green_dark_1">#215456</color>
+    <color name="light_green_1_semitransparent">#a8215456</color>
     <color name="green_dark_2">#00363b</color>
     <color name="green_dark_2_semitransparent">#a800363b</color>
     <color name="light_green_2">#00ab8d</color>
