--- a/SportsSideKick/app/src/main/res/values/styles.xml
+++ b/SportsSideKick/app/src/main/res/values/styles.xml
@@ -29,6 +29,18 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="button_call">
+        <item name="android:textColor">@drawable/button_onclick_change_text_color_login</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:background">@drawable/button_call</item>
+        <item name="android:paddingLeft">40dp</item>
+        <item name="android:paddingRight">40dp</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
     <style name="button_facebook">
         <item name="android:textAllCaps">false</item>
         <item name="android:background">@drawable/button_facebook</item>
