--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -21,253 +21,232 @@
         android:layout_height="match_parent"
         app:srl_direction="bottom"
         android:layout_above="@+id/fragment_wall_bottom_bar">
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/fragment_wall_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/fragment_wall_bottom_bar" />
+            android:layout_height="match_parent" />
 
     </com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>
 
+
     <RelativeLayout
-        android:id="@+id/your_post_container"
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:background="@color/green_dark_3"
         android:layout_above="@+id/fragment_wall_bottom_bar"
-        android:layout_alignParentStart="true"
-        android:visibility="gone"
-        android:background="@color/colorPrimary"
-        >
+        android:layout_height="wrap_content">
         <RelativeLayout
+            android:id="@+id/your_post_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_toLeftOf="@+id/vertical_separator" >
-            <ImageView
-                android:id="@+id/uploaded_image"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:visibility="gone"
-                android:scaleType="centerCrop"
+            android:clickable="true"
+            android:layout_height="60dp"
+            android:visibility="gone"
+            android:layout_alignParentStart="true">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_toLeftOf="@+id/vertical_separator" >
+                <ImageView
+                    android:id="@+id/uploaded_image"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:visibility="gone"
+                    android:scaleType="centerCrop"
+                    android:layout_centerVertical="true"
+                    android:src="@color/black"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:layout_marginBottom="@dimen/margin_10"
+                    android:layout_alignParentStart="true"/>
+                <ImageView
+                    android:id="@+id/remove_uploaded_photo_button"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:visibility="gone"
+                    android:layout_alignTop="@+id/uploaded_image"
+                    android:src="@drawable/removephotobutton"
+                    android:layout_alignEnd="@+id/uploaded_image"/>
+                <EditText
+                    android:id="@+id/post_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="@dimen/margin_10"
+                    android:backgroundTint="@color/colorPrimary"
+                    android:hint="Write your post here."
+                    android:textColor="@color/white"
+                    android:layout_toEndOf="@+id/uploaded_image"
+                    android:layout_toStartOf="@+id/post_post_button"
+                    android:textColorHint="@color/colorPrimarySemiLight" />
+                <ImageView
+                    android:id="@+id/post_post_button"
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/btn_send"
+                    android:layout_marginStart="@dimen/margin_10"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:tint="@color/colorPrimarySemiLight"
+                    android:layout_alignParentEnd="true"
+                    android:visibility="visible"/>
+            </RelativeLayout>
+            <View
+                android:id="@+id/vertical_separator"
+                android:layout_width="2dp"
+                android:layout_height="match_parent"
+                android:layout_toStartOf="@+id/media_buttons"
+                android:background="@color/light_green_1_semitransparent" />
+            <LinearLayout
+                android:id="@+id/media_buttons"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:src="@color/black"
-                android:layout_marginTop="@dimen/margin_10"
-                android:layout_marginBottom="@dimen/margin_10"
-                android:layout_alignParentStart="true"/>
-            <ImageView
-                android:id="@+id/remove_uploaded_photo_button"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:visibility="gone"
-                android:layout_alignTop="@+id/uploaded_image"
-                android:src="@drawable/removephotobutton"
-                android:layout_alignEnd="@+id/uploaded_image"/>
+                android:gravity="center"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/image_button"
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/button_image"
+                    android:tint="@color/colorPrimarySemiLight" />
+                <ImageView
+                    android:id="@+id/camera_button"
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/button_camera"
+                    android:tint="@color/colorPrimarySemiLight" />
+                <ImageView
+                    android:id="@+id/video_button"
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/button_camera"
+                    android:tint="@color/colorPrimarySemiLight" />
+            </LinearLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/wall_filter_container"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:clickable="true"
+            android:layout_alignParentStart="true"
+            android:visibility="gone">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center">
+                <ToggleButton
+                    android:id="@+id/news_filter_toggle"
+                    style="@style/toggle_button_filter"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/wall_button_size"
+                    android:textOff="News"
+                    android:textOn="News" />
+                <ToggleButton
+                    android:id="@+id/user_filter_toggle"
+                    style="@style/toggle_button_filter"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/wall_button_size"
+                    android:textOff="User"
+                    android:textOn="User" />
+                <ToggleButton
+                    android:id="@+id/stats_filter_toggle"
+                    style="@style/toggle_button_filter"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/wall_button_size"
+                    android:textOff="Stats"
+                    android:textOn="Stats" />
+                <ToggleButton
+                    android:id="@+id/rumours_filter_toggle"
+                    style="@style/toggle_button_filter"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/wall_button_size"
+                    android:textOff="Rumours"
+                    android:textOn="Rumours" />
+                <ToggleButton
+                    android:id="@+id/store_filter_toggle"
+                    style="@style/toggle_button_filter"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/wall_button_size"
+                    android:textOff="Store"
+                    android:textOn="Store" />
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/search_wall_post"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:clickable="true"
+            android:layout_alignParentStart="true"
+            android:visibility="gone">
+
             <EditText
-                android:id="@+id/post_text"
+                android:id="@+id/search_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_margin="@dimen/margin_10"
                 android:backgroundTint="@color/colorPrimary"
-                android:hint="Write your post here."
+                android:hint="Search Wall Posts"
                 android:textColor="@color/white"
-                android:layout_toEndOf="@+id/uploaded_image"
-                android:layout_toStartOf="@+id/post_post_button"
                 android:textColorHint="@color/colorPrimarySemiLight" />
-            <ImageView
-                android:id="@+id/post_post_button"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:layout_centerVertical="true"
-                android:src="@drawable/btn_send"
-                android:layout_marginStart="@dimen/margin_10"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
-                android:tint="@color/colorPrimarySemiLight"
-                android:layout_alignParentEnd="true"
-                android:visibility="visible"/>
         </RelativeLayout>
-
-        <View
-            android:id="@+id/vertical_separator"
-            android:layout_width="2dp"
-            android:layout_height="match_parent"
-            android:layout_toStartOf="@+id/media_buttons"
-            android:background="@color/light_green_1_semitransparent" />
-        <LinearLayout
-            android:id="@+id/media_buttons"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:gravity="center"
-            android:orientation="horizontal">
-            <ImageView
-                android:id="@+id/image_button"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/button_image"
-                android:tint="@color/colorPrimarySemiLight" />
-            <ImageView
-                android:id="@+id/camera_button"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/button_camera"
-                android:tint="@color/colorPrimarySemiLight" />
-            <ImageView
-                android:id="@+id/video_button"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/video_call_button"
-                android:tint="@color/colorPrimarySemiLight" />
-        </LinearLayout>
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/wall_filter_container"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
+
+
+    <View
+        android:id="@+id/shadow"
+        android:layout_width="fill_parent"
+        android:layout_height="3dp"
         android:layout_above="@+id/fragment_wall_bottom_bar"
-        android:layout_alignParentStart="true"
-        android:background="@color/colorPrimary"
-        android:visibility="gone">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="center">
-            <ToggleButton
-                android:id="@+id/news_filter_toggle"
-                style="@style/toggle_button_filter"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:textOff="News"
-                android:textOn="News" />
-            <ToggleButton
-                android:id="@+id/user_filter_toggle"
-                style="@style/toggle_button_filter"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:textOff="User"
-                android:textOn="User" />
-            <ToggleButton
-                android:id="@+id/stats_filter_toggle"
-                style="@style/toggle_button_filter"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:textOff="Stats"
-                android:textOn="Stats" />
-            <ToggleButton
-                android:id="@+id/rumours_filter_toggle"
-                style="@style/toggle_button_filter"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:textOff="Rumours"
-                android:textOn="Rumours" />
-            <ToggleButton
-                android:id="@+id/store_filter_toggle"
-                style="@style/toggle_button_filter"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:textOff="Store"
-                android:textOn="Store" />
-        </LinearLayout>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/search_wall_post"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_above="@+id/fragment_wall_bottom_bar"
-        android:layout_alignParentStart="true"
-        android:background="@color/colorPrimary"
-        android:visibility="gone">
-
-        <EditText
-            android:id="@+id/search_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_margin="@dimen/margin_10"
-            android:backgroundTint="@color/colorPrimary"
-            android:hint="Search Wall Posts"
-            android:textColor="@color/white"
-            android:textColorHint="@color/colorPrimarySemiLight" />
-    </RelativeLayout>
+        android:background="@drawable/top_gradient_drawable">
+    </View>
 
     <RelativeLayout
         android:id="@+id/fragment_wall_bottom_bar"
+        android:clickable="true"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/standard_button_height"
-        android:background="@color/green_dark_2_semitransparent"
-        android:gravity="center_horizontal"
+        android:layout_height="60dp"
+        android:background="@color/green_dark_2"
+        android:gravity="center"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true">
-
         <Button
             android:id="@+id/fragment_wall_new_post"
             android:layout_width="@dimen/wall_button_size"
             android:layout_height="@dimen/wall_button_size"
-            android:layout_centerVertical="true"
             android:layout_marginEnd="@dimen/padding_8"
             android:layout_marginStart="@dimen/padding_16"
+            android:layout_marginTop="@dimen/margin_10"
+            android:layout_marginBottom="@dimen/margin_10"
+            android:layout_toStartOf="@+id/fragment_wall_filter"
             android:background="@drawable/wall_new_post_selector" />
-
-        <Button
-            android:id="@+id/fragment_wall_notification"
-            android:layout_width="@dimen/wall_button_size"
-            android:layout_height="@dimen/wall_button_size"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="@dimen/padding_8"
-            android:layout_marginStart="@dimen/padding_8"
-            android:layout_toEndOf="@id/fragment_wall_new_post"
-            android:background="@drawable/wall_notification_selector"
-            android:visibility="gone" />
-
         <Button
             android:id="@+id/fragment_wall_filter"
             android:layout_width="@dimen/wall_button_size"
             android:layout_height="@dimen/wall_button_size"
-            android:layout_centerVertical="true"
             android:layout_marginEnd="@dimen/margin_20"
+         android:layout_marginTop="@dimen/margin_10"
+            android:layout_marginBottom="@dimen/margin_10"
             android:layout_marginStart="@dimen/margin_20"
-            android:layout_toEndOf="@id/fragment_wall_notification"
+            android:layout_centerHorizontal="true"
             android:background="@drawable/wall_filter_selector" />
-
-        <Button
-            android:id="@+id/fragment_wall_following"
-            android:layout_width="@dimen/wall_button_size"
-            android:layout_height="@dimen/wall_button_size"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="@dimen/padding_8"
-            android:layout_marginStart="@dimen/padding_8"
-            android:layout_toEndOf="@id/fragment_wall_filter"
-            android:background="@drawable/wall_following_selector"
-            android:visibility="gone" />
-
         <Button
             android:id="@+id/fragment_wall_search"
             android:layout_width="@dimen/wall_button_size"
             android:layout_height="@dimen/wall_button_size"
-            android:layout_centerVertical="true"
             android:layout_marginEnd="@dimen/padding_16"
+            android:layout_marginTop="@dimen/margin_10"
+            android:layout_marginBottom="@dimen/margin_10"
             android:layout_marginStart="@dimen/padding_8"
-            android:layout_toEndOf="@id/fragment_wall_following"
+            android:layout_toEndOf="@id/fragment_wall_filter"
             android:background="@drawable/wall_search_selector" />
 
-        <Button
-            android:id="@+id/fragment_wall_full_screen"
-            android:layout_width="@dimen/wall_button_size"
-            android:layout_height="@dimen/wall_button_size"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="@dimen/padding_16"
-            android:layout_marginStart="@dimen/padding_16"
-            android:background="@drawable/ic_fullscreen"
-            android:visibility="gone" />
-
     </RelativeLayout>
-
 </RelativeLayout>
