--- a/SportsSideKick/app/src/main/res/layout/popup_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_signup.xml
@@ -138,6 +138,7 @@
                     android:background="@color/colorPrimary" />
 
                 <TextView
+                    android:id="@+id/or_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
