--- a/SportsSideKick/app/src/main/res/drawable/popup_bottom_background_dark.xml
+++ b/SportsSideKick/app/src/main/res/drawable/popup_bottom_background_dark.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/colorPrimary"/>
-    <corners android:bottomLeftRadius="20dip" android:bottomRightRadius="20dip"/>
+    <corners android:bottomLeftRadius="@dimen/margin_sharp_20" android:bottomRightRadius="@dimen/margin_sharp_20"/>
 </shape>
