--- a/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
@@ -21,7 +21,7 @@
             android:layout_height="match_parent"
             android:layout_below="@+id/left_top_bar_container"
             android:layout_above="@+id/side_menu_recycler"
-            android:background="@color/gray_menu">
+            android:background="?green_dark_1">
 
         </RelativeLayout>
         <!-- TICKER -->
