--- a/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
@@ -129,4 +129,6 @@
     <color name="video_chat_button_text_color">#4d4e4c</color>
 
     <color name="player_background_color">#f6f7fa</color>
+
+    <color name="system_bar_color">#022b31</color>
 </resources>
